--- a/carltons-karoo/seeds.html
+++ b/carltons-karoo/seeds.html
@@ -61,9 +61,10 @@ content="text/html;charset=utf-8" />
 					 </div>
 					 <div id="contentBottom">
 					 	<ul><a href="pics/seeds/asp!gasteria!(armstrongii x batesiana) x ?!6.JPG">Gasteria (armstrongii x batesiana) x ?</a>&nbsp;&nbsp;$6<hr>
-<a href="pics/seeds/asp!gasteria!armstrongii cv. 'Poliwog' x ?!6.JPG">Gasteria armstrongii cv. 'Poliwog' x ?</a>&nbsp;&nbsp;$6<hr>
-<a href="pics/seeds/asp!gasteria!armstrongii hybrid x ?!6.JPG">Gasteria armstrongii hybrid x ?</a>&nbsp;&nbsp;$6<hr>
-<a href="pics/seeds/asp!gasteria!armstrongii x ?!6.JPG">Gasteria armstrongii x ?</a>&nbsp;&nbsp;$6</ul>
+<a href="pics/seeds/asp!gasteria!(armstrongii%20x%20batesiana)%20x%20%3F!6.JPG">Gasteria (armstrongii%20x%20batesiana)%20x%20?</a>&nbsp;&nbsp;$6<hr>
+<a href="pics/seeds/asp!gasteria!armstrongii cv. 'Poliwog' x %3F!6.JPG">Gasteria armstrongii cv. 'Poliwog' x ?</a>&nbsp;&nbsp;$6<hr>
+<a href="pics/seeds/asp!gasteria!armstrongii hybrid x %3F!6.JPG">Gasteria armstrongii hybrid x ?</a>&nbsp;&nbsp;$6<hr>
+<a href="pics/seeds/asp!gasteria!armstrongii x %3F!6.JPG">Gasteria armstrongii x ?</a>&nbsp;&nbsp;$6</ul>
 					</div><div id="contentSingle">
 						     <h3 class="textHeaderLabel">Cactaceae | 10 seeds</h3>
 					 </div>
