--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ class="repoDescriptionHeader">Carlton's&apos;s<br>Karoo</h2>
 			<div id="contentBottom">
 				<ul>
 					<li>
-						<p>Hey, my name is Carlton. I initially adatpted this website from /u/uroboro to use as a cydia repo but my interests have overall changed over the past few years.  I am now using it as a fun way to teach myself HTML & CSS etc. while also making use of it to sell seeds that I have harvested from my collection of plants along with extra plants or seed grown plants, primarily cacti and african succulents.  I also plan to use this site as a way to share with other plant enthusiasts certain things i have learned and resources I have used.  I too will be using this website to host my homebrew recipes to share with homebrewers and others alike.</p>
+						<p>Hey, my name is Carlton. I initially adatpted this website from /u/uroboro to use as a cydia repo but my interests have overall changed over the past few years.  I am now using it as a fun way to teach myself HTML & CSS etc. while also making use of it to sell seeds that I have harvested from my collection of plants along with extra plants or seed grown plants, primarily cacti and african succulents.  I also plan to use this site as a way to share with other plant enthusiasts certain things I have learned and resources I have used.  I too will be using this website to host my homebrew recipes to share with homebrewers and others alike.</p>
 					</li>
 				</ul>
 			</div>
@@ -45,13 +45,11 @@ class="repoDescriptionHeader">Carlton's&apos;s<br>Karoo</h2>
 					    	<hr>
 				    	<a href="https://www.instagram.com/fat_leaves_and_long_spines/" target="_blank">Plantstagram</a>
 							<hr>
-				        <a href="http://carlyd95.github.io/hobby/carltons-karoo/lithops.pdf" target="_blank">Lithops PDF</a>
+				        <a href="http://carlyd95.github.io/hobby/plants/lithops.pdf" target="_blank">Lithops PDF</a>
 					    	<hr>
 					    <a href="/carltons-karoo/sowing.html">Sowing Tips</a>
 					    	<hr>
 					    <a href="/carltons-karoo/sowing.html">Plant Wishlist</a>
-					    	<hr>
-					    <a href="/carltons-karoo/cultivation.html">Other References</a>
 					    	<hr>
 					    <a href="/carltons-karoo/cultivation.html">Cultivation Tips</a>
 				    </ul>			
