--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=0", charset="UTF-8">
 		
 		<link rel="stylesheet" type="text/css" href="depics/css/layoutNew.css">
-		<link rel="icon" href='/favicon.png' type='image/png' />
+		<link rel="icon" href='/favicon.jpg' type='image/jpg' />
 	</head>
 
 	<body>
@@ -20,7 +20,7 @@
 				<img class="croppedImage" src="depics/images/logo
 				.jpg">
 				<h2
-class="repoDescriptionHeader">Carlton's&apos;s<br>Karoo</h2>
+class="repoDescriptionHeader">Carlton&apos;s<br>Karoo</h2>
 			
 			</div><!--Close Package Header Div-->
 			<div id="contentSingle">
