--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ class="repoDescriptionHeader">Carlton&apos;s<br>Karoo</h2>
 			</div>
 
 			<div id="contentSingle">
-				<h3 class="textHeaderLabel">Carlton's Karoo</h3>
+				<h3 class="textHeaderLabel">Carlton's Karoo: Seeds & Plants</h3>
 			</div>
 				<div id="contentBottom">
 					<ul>
