--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@ class="repoDescriptionHeader">Carlton&apos;s<br>Karoo</h2>
 			
 			</div><!--Close Package Header Div-->
 			<div id="contentSingle">
-				<h3 class="textHeaderLabel">A little about myself...</h3>
+				<h3 class="textHeaderLabel">A Little about myself...</h3>
 			</div>
 			<div id="contentBottom">
 				<ul>
 					<li>
-						<p>Hey, my name is Carlton. I initially adatpted this website from /u/uroboro to use as a cydia repo but my interests have overall changed over the past few years.  I am now using it as a fun way to teach myself HTML & CSS etc. while also making use of it to sell seeds that I have harvested from my collection of plants along with extra plants or seed grown plants, primarily cacti and african succulents.  I also plan to use this site as a way to share with other plant enthusiasts certain things I have learned and resources I have used.  I too will be using this website to host my homebrew recipes to share with homebrewers and others alike.</p>
+						<p>Hey, my name is Carlton. I. Love. Plants. Particularly cacti and African succulents... My favorite genera include: haworthia, tulista, haworthiospsis, gasteria, lithops, stapeliads, certain euphorbia, adromischus, certain cacti and some caudiciforms and bulbs. I created this site in order to share, the plants that I love so much, with others while at the same time earning some extra cash to invest in more plants and seeds to enrichen my own collection. Also feel free to email or imessage (links below) me if you are interested in trading seeds :)</p>
 					</li>
 				</ul>
 			</div>
@@ -66,8 +66,6 @@ class="repoDescriptionHeader">Carlton&apos;s<br>Karoo</h2>
 							<hr>							
 						<a href="https://dailytext.000webhostapp.com/" target="_blank">Daily Text Email Subscription</a>
 							<hr>							
-						<a href="sms:dcarltondunlap@me.com" target="_blank">iMessage Me</a>
-							<hr>
 						<a href="https://paypal.me/dunlap794/" target="_blank">Buy Me a 🍺</a>
 							<hr>							
 						<a href="https://github.com/carlyd95/" target="_blank">My GitHub</a>
@@ -75,6 +73,16 @@ class="repoDescriptionHeader">Carlton&apos;s<br>Karoo</h2>
 						<a href="cydia://url/https://cydia.saurik.com/api/share#?source=http://carlyd95.github.io/repo/" target="_blank">Add My Repo (old cydia repo)</a>
   						
 					</ul>			
+				</div><!--Close Package Header Div-->
+			<div id="contentSingle">
+							<h3 class="textHeaderLabel">Contact</h3>
+						</div>
+							<div id="contentBottom">
+								<ul>
+									<a href="sms:dcarltondunlap@me.com" target="_blank">iMessage</a>
+										<hr>
+									<a href="email:dcarltondunlap@me.com" target="_blank">Email</a>
+								</ul>			
 				</div><!--Close Package Header Div-->
 
 			</div><!--Close Container Div-->
