--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ class="repoDescriptionHeader">Carlton&apos;s<br>Karoo</h2>
 			
 			</div><!--Close Package Header Div-->
 			<div id="contentSingle">
-				<h3 class="textHeaderLabel">A Little about myself...</h3>
+				<h3 class="textHeaderLabel">Introduction</h3>
 			</div>
 			<div id="contentBottom">
 				<ul>
