--- a/carltons-karoo/seeds.html
+++ b/carltons-karoo/seeds.html
@@ -10,8 +10,7 @@ content="text/html;charset=utf-8" />
 		
 		<link rel="stylesheet" type="text/css" href="../depics/css/layoutNew.css">
 
-		<link rel="stylesheet" type="text/css" href="depics/css/layoutNew.css">
-		<link rel="icon" href='/favicon.png' type='image/png' />
+		<link rel="icon" href='/favicon.jpg' type='image/jpg' />
 	</head>
 
 	<body>
