--- a/carltons-karoo/plants.html
+++ b/carltons-karoo/plants.html
@@ -47,6 +47,8 @@ content="text/html;charset=utf-8" />
 <a href="pics/plants/asp!haworthia!acuminata!14.JPG">Haworthia acuminata</a>&nbsp;&nbsp;$14<hr>
 <a href="pics/plants/asp!haworthia!cv. 'Yukigeshiki'!18.JPG">Haworthia cv. 'Yukigeshiki'</a>&nbsp;&nbsp;$18<hr>
 <a href="pics/plants/asp!haworthia!pygmaea!8.JPG">Haworthia pygmaea</a>&nbsp;&nbsp;$8<hr>
+<a href="pics/plants/asp!haworthia!retusa HBG73907 ex. B. Kent!12.jpg">Haworthia retusa HBG73907 ex. B. Kent</a>&nbsp;&nbsp;$12<hr>
+<a href="pics/plants/asp!haworthia!truncata cv. 'Araiso' (the pup circled)!38.jpg">Haworthia truncata cv. 'Araiso' (the pup circled)</a>&nbsp;&nbsp;$38<hr>
 <a href="pics/plants/asp!haworthiopsis!attenuata v. radula!8.JPG">Haworthiopsis attenuata v. radula</a>&nbsp;&nbsp;$8<hr>
 <a href="pics/plants/asp!haworthiopsis!attenuata v. tanba &#34;enon&#34;!8.JPG">Haworthiopsis attenuata v. tanba "enon"</a>&nbsp;&nbsp;$8<hr>
 <a href="pics/plants/asp!haworthiopsis!attenuata!8.JPG">Haworthiopsis attenuata</a>&nbsp;&nbsp;$8<hr>
@@ -61,11 +63,16 @@ content="text/html;charset=utf-8" />
 						     <h3 class="textHeaderLabel">Cactaceae</h3>
 					 </div>
 					 <div id="contentBottom">
-					 	<ul><a href="pics/plants/cac!ferocactus!latispinus!10.JPG">Ferocactus latispinus</a>&nbsp;&nbsp;$10<hr>
+					 	<ul><a href="pics/plants/cac!browningia!hertlingiana!12.jpg">Browningia hertlingiana</a>&nbsp;&nbsp;$12<hr>
+<a href="pics/plants/cac!copiapoa!tenuissima!10.jpg">Copiapoa tenuissima</a>&nbsp;&nbsp;$10<hr>
+<a href="pics/plants/cac!ferocactus!latispinus!10.JPG">Ferocactus latispinus</a>&nbsp;&nbsp;$10<hr>
 <a href="pics/plants/cac!gymnocalycium!baldianum!8.JPG">Gymnocalycium baldianum</a>&nbsp;&nbsp;$8<hr>
 <a href="pics/plants/cac!maihueniopsis!molinensis!15.JPG">Maihueniopsis molinensis</a>&nbsp;&nbsp;$15<hr>
 <a href="pics/plants/cac!melocactus!mantazanus!18.JPG">Melocactus mantazanus</a>&nbsp;&nbsp;$18<hr>
+<a href="pics/plants/cac!parodia!occulta!10.jpg">Parodia occulta</a>&nbsp;&nbsp;$10<hr>
+<a href="pics/plants/cac!parodia!schlosseri!8.jpg">Parodia schlosseri</a>&nbsp;&nbsp;$8<hr>
 <a href="pics/plants/cac!parodia!werneri!8.JPG">Parodia werneri</a>&nbsp;&nbsp;$8<hr>
+<a href="pics/plants/cac!stenocactus!species!12.jpg">Stenocactus species</a>&nbsp;&nbsp;$12<hr>
 <a href="pics/plants/cac!tephrocactus!alexanderi v. geometricus!48.JPG">Tephrocactus alexanderi v. geometricus</a>&nbsp;&nbsp;$48<hr>
 <a href="pics/plants/cac!trichocereus!chiloensis!12.JPG">Trichocereus chiloensis</a>&nbsp;&nbsp;$12<hr>
 <a href="pics/plants/cac!trichocereus!terscheckii!16.JPG">Trichocereus terscheckii</a>&nbsp;&nbsp;$16</ul>
