--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ class="repoDescriptionHeader">Carlton&apos;s<br>Karoo</h2>
 			<div id="contentBottom">
 				<ul>
 					<li>
-						<p>Hey, my name is Carlton. I. Love. Plants. Particularly cacti and African succulents... My favorite genera include: haworthia, tulista, haworthiospsis, gasteria, lithops, stapeliads, certain euphorbia, adromischus, certain cacti and some caudiciforms and bulbs. I created this site in order to share, the plants that I love so much, with others while at the same time earning some extra cash to invest in more plants and seeds to enrichen my own collection. Also feel free to email or imessage (links below) me if you are interested in trading seeds :)</p>
+						<p>Hey, my name is Carlton and well to put it quite simply... I. Love. Plants! Particularly Cacti and African succulents... My favorite genera include: Haworthia, Tulista, Haworthiospsis, Gasteria, Lithops and similar Mesembs, Stapeliads, certain Euphorbia, Adromischus, Certain Cacti and some caudiciforms and bulbs. I created this site in order to share, the plants that I love so much, with others while at the same time earning some extra cash to invest in more plants and seeds to enrichen my own collection. Also feel free to email or imessage (both linked below) me if you are interested in trading seeds :)</p>
 					</li>
 				</ul>
 			</div>
@@ -45,13 +45,13 @@ class="repoDescriptionHeader">Carlton&apos;s<br>Karoo</h2>
 					    	<hr>
 				    	<a href="https://www.instagram.com/fat_leaves_and_long_spines/" target="_blank">Plantstagram</a>
 							<hr>
-				        <a href="http://carlyd95.github.io/hobby/plants/lithops.pdf" target="_blank">Lithops PDF</a>
+				        <a href="http://carlyd95.github.io/hobby/carltons-karoo/lithops.pdf" target="_blank">Lithops PDF</a>
 					    	<hr>
-					    <a href="/carltons-karoo/sowing.html">Sowing Tips</a>
+					    <a href="/carltons-karoo/sowing.html">Sowing Tips (Coming Soon...)</a>
 					    	<hr>
-					    <a href="/carltons-karoo/sowing.html">Plant Wishlist</a>
+					    <a href="/carltons-karoo/wishlist.txt">Plant Wishlist</a>
 					    	<hr>
-					    <a href="/carltons-karoo/cultivation.html">Cultivation Tips</a>
+					    <a href="/carltons-karoo/cultivation.html">Cultivation Tips(Coming Soon...)</a>
 				    </ul>			
 				</div><!--Close Package Header Div-->
 
@@ -60,13 +60,13 @@ class="repoDescriptionHeader">Carlton&apos;s<br>Karoo</h2>
 			</div>
 				<div id="contentBottom">
 					<ul>
-						<a href="https://carlyd95.github.io/hobby/beer" target="_blank">Homebrew Recipes</a>
+						<a href="https://carlyd95.github.io/beer" target="_blank">Homebrew Recipes</a>
 							<hr>
 						<a href="http://carlyd95.github.io/KaraokeList.csv" target="_blank">Karaoke Song List</a>
 							<hr>							
 						<a href="https://dailytext.000webhostapp.com/" target="_blank">Daily Text Email Subscription</a>
 							<hr>							
-						<a href="https://paypal.me/dunlap794/" target="_blank">Buy Me a 🍺</a>
+						<a href="https://paypal.me/dunlap794/" target="_blank">Buy Me A 🍺</a>
 							<hr>							
 						<a href="https://github.com/carlyd95/" target="_blank">My GitHub</a>
 							<hr>							
