--- a/beer/index.html
+++ b/beer/index.html
@@ -15,9 +15,9 @@
 		<div id="container">
 			
 			<div id="contentSingle">
-				<img class="croppedImage" src="../depics/images/logo.jpg">
+				<img class="croppedImage" src="../depics/images/beer.jpg">
 				<h2
-class="repoDescriptionHeader">&nbsp;&nbsp;C & D Brews</h3>
+class="repoDescriptionHeader">Dunlap<br>Brews</h3>
 			
 			</div><!--Close Package Header Div-->
 			<div id="contentSingle">
