--- a/carltons-karoo/plants.html
+++ b/carltons-karoo/plants.html
@@ -53,7 +53,7 @@ content="text/html;charset=utf-8" />
 <a href="pics/plants/asp!haworthiopsis!attenuata v. tanba &#34;enon&#34;!8.JPG">Haworthiopsis attenuata v. tanba "enon"</a>&nbsp;&nbsp;$8<hr>
 <a href="pics/plants/asp!haworthiopsis!attenuata!8.JPG">Haworthiopsis attenuata</a>&nbsp;&nbsp;$8<hr>
 <a href="pics/plants/asp!haworthiopsis!cf. attenuata x limifolia!10.JPG">Haworthiopsis cf. attenuata x limifolia</a>&nbsp;&nbsp;$10<hr>
-<a href="pics/plants/asp!haworthiopsis!coarctata v. chulamnensis!6.JPG">Haworthiopsis coarctata v. chulamnensis</a>&nbsp;&nbsp;$6<hr>
+<a href="pics/plants/asp!haworthiopsis!coarctata v. chulamnensis!6 2&#34; tall plant.JPG">Haworthiopsis coarctata v. chulamnensis</a>&nbsp;&nbsp;$6 2" tall plant<hr>
 <a href="pics/plants/asp!haworthiopsis!limifolia f. variegata!18.JPG">Haworthiopsis limifolia f. variegata</a>&nbsp;&nbsp;$18<hr>
 <a href="pics/plants/asp!haworthiopsis!tessellata!8.JPG">Haworthiopsis tessellata</a>&nbsp;&nbsp;$8<hr>
 <a href="pics/plants/asp!tulista!&#34;uitewaaliana&#34; CL1!38.JPG">Tulista "uitewaaliana" CL1</a>&nbsp;&nbsp;$38<hr>
@@ -74,18 +74,18 @@ content="text/html;charset=utf-8" />
 <a href="pics/plants/cac!parodia!werneri!8.JPG">Parodia werneri</a>&nbsp;&nbsp;$8<hr>
 <a href="pics/plants/cac!stenocactus!species!12.jpg">Stenocactus species</a>&nbsp;&nbsp;$12<hr>
 <a href="pics/plants/cac!tephrocactus!alexanderi v. geometricus!48.JPG">Tephrocactus alexanderi v. geometricus</a>&nbsp;&nbsp;$48<hr>
-<a href="pics/plants/cac!trichocereus!chiloensis!12.JPG">Trichocereus chiloensis</a>&nbsp;&nbsp;$12<hr>
+<a href="pics/plants/cac!trichocereus!chiloensis!12 | shown in a 3&#34; pot.JPG">Trichocereus chiloensis</a>&nbsp;&nbsp;$12 | shown in a 3" pot<hr>
 <a href="pics/plants/cac!trichocereus!terscheckii!16.JPG">Trichocereus terscheckii</a>&nbsp;&nbsp;$16</ul>
 					</div><div id="contentSingle">
 						     <h3 class="textHeaderLabel">Euphorbiaceae</h3>
 					 </div>
 					 <div id="contentBottom">
-					 	<ul><a href="pics/plants/eup!euphorbia!baioensis!12.JPG">Euphorbia baioensis</a>&nbsp;&nbsp;$12<hr>
-<a href="pics/plants/eup!euphorbia!griseola!12.JPG">Euphorbia griseola</a>&nbsp;&nbsp;$12<hr>
-<a href="pics/plants/eup!euphorbia!heteropoda!10.JPG">Euphorbia heteropoda</a>&nbsp;&nbsp;$10<hr>
-<a href="pics/plants/eup!euphorbia!species 1!10.JPG">Euphorbia species 1</a>&nbsp;&nbsp;$10<hr>
-<a href="pics/plants/eup!euphorbia!species 2!8.JPG">Euphorbia species 2</a>&nbsp;&nbsp;$8<hr>
-<a href="pics/plants/eup!euphorbia!species 3!12.JPG">Euphorbia species 3</a>&nbsp;&nbsp;$12</ul>
+					 	<ul><a href="pics/plants/eup!euphorbia!baioensis!12 | shown in a 3.5&#34; pot.JPG">Euphorbia baioensis</a>&nbsp;&nbsp;$12 | shown in a 3.5" pot<hr>
+<a href="pics/plants/eup!euphorbia!griseola!10 | 4-5&#34; tall plant.JPG">Euphorbia griseola</a>&nbsp;&nbsp;$10 | 4-5" tall plant<hr>
+<a href="pics/plants/eup!euphorbia!heteropoda!10 | shown in a 4&#34; pot.JPG">Euphorbia heteropoda</a>&nbsp;&nbsp;$10 | shown in a 4" pot<hr>
+<a href="pics/plants/eup!euphorbia!species 1!10 | shown in a 3&#34; pot.JPG">Euphorbia species 1</a>&nbsp;&nbsp;$10 | shown in a 3" pot<hr>
+<a href="pics/plants/eup!euphorbia!species 2!8 | shown in a 3.5&#34; pot.JPG">Euphorbia species 2</a>&nbsp;&nbsp;$8 | shown in a 3.5" pot<hr>
+<a href="pics/plants/eup!euphorbia!species 3!15 1' tall plant.JPG">Euphorbia species 3</a>&nbsp;&nbsp;$15 1' tall plant</ul>
 					</div><div id="contentSingle">
 						     <h3 class="textHeaderLabel">Portulacaceae</h3>
 					 </div>
