--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ class="repoDescriptionHeader">Carlton&apos;s<br>Karoo</h2>
 			<div id="contentBottom">
 				<ul>
 					<li>
-						<p>Hey, my name is Carlton and well to put it quite simply... I. Love. Plants! Particularly Cacti and African succulents... My favorite genera include: Haworthia, Tulista, Haworthiospsis, Gasteria, Lithops and similar Mesembs, Stapeliads, certain Euphorbia, Adromischus, Certain Cacti and some caudiciforms and bulbs. I created this site in order to share, the plants that I love so much, with others while at the same time earning some extra cash to invest in more plants and seeds to enrichen my own collection. Also feel free to email or imessage (both linked below) me if you are interested in trading seeds :)</p>
+						<p>Hey, my name is Carlton. And put quite simply... I. Love. Plants! Particularly Cacti and African succulents... My favorite genera include: Haworthia, Tulista, Haworthiospsis, Gasteria, Lithops and similar Mesembs, Stapeliads, certain Euphorbia, Adromischus, Certain Cacti and some caudiciforms and bulbs. I created this site in order to share, the plants that I love so much, with others while at the same time earning some extra cash to invest in more plants and seeds to enrichen my own collection. Also feel free to email or imessage (both linked below) me if you are interested in trading seeds :)</p>
 					</li>
 				</ul>
 			</div>
