--- a/carltons-karoo/plants.html
+++ b/carltons-karoo/plants.html
@@ -33,7 +33,7 @@ content="text/html;charset=utf-8" />
 						<p>For the time being U.S. orders only...
 								<br>
 								<br>
-							The minimum shipping costs for any plant ordrs is $8. The plant for sale is in the picture displayed 
+							The shipping cost is 15% of the order total, with the minimum shipping price per order being $8. For size reference, all plants are shown in a 3"x3"x3" cubic pot unless otherwise stated next to the price. 
 						</p>
 					</li> 
 				</ul> 
