--- a/beer/index.html
+++ b/beer/index.html
@@ -34,11 +34,11 @@ class="repoDescriptionHeader">Dunlap<br>Brews</h3>
 					<ul>
 
 					<li>
-						<a href="https://carlyd95.github.io/hobby/beer/recipes/SourNEIPA.br" target="_blank">Sour NEIPA</a>
+						<a href="https://carlyd95.github.io/hobby/beer/recipes/SourNEIPA.html" target="_blank">Sour NEIPA</a>
 					</li>
 <hr>
 					<li>
-						<a href="https://carlyd95.github.io/hobby/beer/recipes/Gose.br" target="_blank">Lemon Grass Gose</a>
+						<a href="https://carlyd95.github.io/hobby/beer/recipes/Gose.html" target="_blank">Lemon Grass Gose</a>
 					</li>
 </div>
 					</li>
