--- a/carltons-karoo/seeds.html
+++ b/carltons-karoo/seeds.html
@@ -49,6 +49,7 @@ content="text/html;charset=utf-8" />
 <a href="pics/seeds/aiz!lithops!julii C216!5.JPG">Lithops julii C216</a>&nbsp;&nbsp;$5<hr>
 <a href="pics/seeds/aiz!lithops!julii C297!5.JPG">Lithops julii C297</a>&nbsp;&nbsp;$5<hr>
 <a href="pics/seeds/aiz!lithops!karasmontana &#34;mickbergensis&#34;!5.JPG">Lithops karasmontana "mickbergensis"</a>&nbsp;&nbsp;$5<hr>
+<a href="pics/seeds/aiz!lithops!karasmontana &#34;signalberg&#34;!5.jpg">Lithops karasmontana "signalberg"</a>&nbsp;&nbsp;$5<hr>
 <a href="pics/seeds/aiz!lithops!karasmontana &#34;summitatum&#34;!5.JPG">Lithops karasmontana "summitatum"</a>&nbsp;&nbsp;$5<hr>
 <a href="pics/seeds/aiz!lithops!karasmontana v. tischeri C182!5.JPG">Lithops karasmontana v. tischeri C182</a>&nbsp;&nbsp;$5<hr>
 <a href="pics/seeds/aiz!lithops!marmorata &#34;framesii&#34;!5.JPG">Lithops marmorata "framesii"</a>&nbsp;&nbsp;$5<hr>
@@ -67,7 +68,8 @@ content="text/html;charset=utf-8" />
 						     <h3 class="textHeaderLabel">Cactaceae | 10 seeds</h3>
 					 </div>
 					 <div id="contentBottom">
-					 	<ul><a href="pics/seeds/cac!melocactus!albicephalus!4.JPG">Melocactus albicephalus</a>&nbsp;&nbsp;$4</ul>
+					 	<ul><a href="pics/seeds/cac!frailea!pygmaea!4.jpg">Frailea pygmaea</a>&nbsp;&nbsp;$4<hr>
+<a href="pics/seeds/cac!melocactus!albicephalus!4.JPG">Melocactus albicephalus</a>&nbsp;&nbsp;$4</ul>
 					</div></ul>
 					</div>
 					</li>
