--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
 		<div id="container">
 			
 			<div id="contentSingleTop">
-				<img class="croppedImage" src="depics/images/logo
-				.jpg">
+				<img class="image" src="depics/images/logo.png">
 				<h2
 class="repoDescriptionHeader">Carlton&apos;s<br>Karoo</h2>
 			
