--- a/carltons-karoo/plants.html
+++ b/carltons-karoo/plants.html
@@ -33,7 +33,7 @@ content="text/html;charset=utf-8" />
 						<p>For the time being U.S. orders only...
 								<br>
 								<br>
-							The shipping cost is 15% of the order total, with the minimum shipping price per order being $8. For size reference, all plants are shown in a 3"x3"x3" cubic pot unless otherwise stated next to the price. 
+							The minimum shipping costs for any plant ordrs is $8. The plant for sale is in the picture displayed 
 						</p>
 					</li> 
 				</ul> 
@@ -45,7 +45,6 @@ content="text/html;charset=utf-8" />
 					 	<ul><a href="pics/plants/asp!gasteraloe!species!8.JPG">Gasteraloe species</a>&nbsp;&nbsp;$8<hr>
 <a href="pics/plants/asp!gasteria!carinata!10.JPG">Gasteria carinata</a>&nbsp;&nbsp;$10<hr>
 <a href="pics/plants/asp!haworthia!acuminata!14 | shown in a 4&#34; pot.JPG">Haworthia acuminata</a>&nbsp;&nbsp;$14 | shown in a 4" pot<hr>
-<a href="pics/plants/asp!haworthia!cv. 'Yukigeshiki'!18.JPG">Haworthia cv. 'Yukigeshiki'</a>&nbsp;&nbsp;$18<hr>
 <a href="pics/plants/asp!haworthia!pygmaea!8.JPG">Haworthia pygmaea</a>&nbsp;&nbsp;$8<hr>
 <a href="pics/plants/asp!haworthia!retusa HBG73907 ex. B. Kent!12.jpg">Haworthia retusa HBG73907 ex. B. Kent</a>&nbsp;&nbsp;$12<hr>
 <a href="pics/plants/asp!haworthia!truncata cv. 'Araiso' (the pup circled)!38.jpg">Haworthia truncata cv. 'Araiso' (the pup circled)</a>&nbsp;&nbsp;$38<hr>
