--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<div id="container">
 			
 			<div id="contentSingleTop">
-				<img class="image" src="depics/images/logo.png">
+				<img class="image" src="depics/images/logo.jpg">
 				<h2
 class="repoDescriptionHeader">Carlton&apos;s<br>Karoo</h2>
 			
