--- a/carltons-karoo/plants.html
+++ b/carltons-karoo/plants.html
@@ -28,21 +28,16 @@ content="text/html;charset=utf-8" />
 				<h3 class="textHeaderLabel">Order Information</h3>
 			</div>
 			<div id="contentBottom">
-				<ul>
-					<li>
 						<p>For the time being U.S. orders only...
 								<br>
 								<br>
-							The minimum shipping costs for any plant ordrs is $8. The plant for sale is in the picture displayed 
-						</p>
-					</li> 
-				</ul> 
+							The minimum shipping costs for any plant ordrs is $8. The plant for sale is in the picture displayed</p>
 			</div>
 <div id="contentSingle">
 						     <h3 class="textHeaderLabel">Asphodelaceae</h3>
 					 </div>
 					 <div id="contentBottom">
-					 	<ul><a href="pics/plants/asp!gasteraloe!species!8.JPG">Gasteraloe species</a>&nbsp;&nbsp;$8<hr>
+					 	<a href="pics/plants/asp!gasteraloe!species!8.JPG">Gasteraloe species</a>&nbsp;&nbsp;$8<hr>
 <a href="pics/plants/asp!gasteria!carinata!10.JPG">Gasteria carinata</a>&nbsp;&nbsp;$10<hr>
 <a href="pics/plants/asp!haworthia!acuminata!14 | shown in a 4&#34; pot.JPG">Haworthia acuminata</a>&nbsp;&nbsp;$14 | shown in a 4" pot<hr>
 <a href="pics/plants/asp!haworthia!pygmaea!8.JPG">Haworthia pygmaea</a>&nbsp;&nbsp;$8<hr>
@@ -57,12 +52,12 @@ content="text/html;charset=utf-8" />
 <a href="pics/plants/asp!haworthiopsis!tessellata!8.JPG">Haworthiopsis tessellata</a>&nbsp;&nbsp;$8<hr>
 <a href="pics/plants/asp!tulista!&#34;uitewaaliana&#34; CL1!38.JPG">Tulista "uitewaaliana" CL1</a>&nbsp;&nbsp;$38<hr>
 <a href="pics/plants/asp!tulista!pumila!14.JPG">Tulista pumila</a>&nbsp;&nbsp;$14<hr>
-<a href="pics/plants/asp!tulista!pumila!8.JPG">Tulista pumila</a>&nbsp;&nbsp;$8</ul>
+<a href="pics/plants/asp!tulista!pumila!8.JPG">Tulista pumila</a>&nbsp;&nbsp;$8
 					</div><div id="contentSingle">
 						     <h3 class="textHeaderLabel">Cactaceae</h3>
 					 </div>
 					 <div id="contentBottom">
-					 	<ul><a href="pics/plants/cac!browningia!hertlingiana!12.jpg">Browningia hertlingiana</a>&nbsp;&nbsp;$12<hr>
+					 	<a href="pics/plants/cac!browningia!hertlingiana!12.jpg">Browningia hertlingiana</a>&nbsp;&nbsp;$12<hr>
 <a href="pics/plants/cac!copiapoa!tenuissima!10.jpg">Copiapoa tenuissima</a>&nbsp;&nbsp;$10<hr>
 <a href="pics/plants/cac!ferocactus!latispinus!10.JPG">Ferocactus latispinus</a>&nbsp;&nbsp;$10<hr>
 <a href="pics/plants/cac!gymnocalycium!baldianum!8.JPG">Gymnocalycium baldianum</a>&nbsp;&nbsp;$8<hr>
@@ -74,23 +69,23 @@ content="text/html;charset=utf-8" />
 <a href="pics/plants/cac!stenocactus!species!12.jpg">Stenocactus species</a>&nbsp;&nbsp;$12<hr>
 <a href="pics/plants/cac!tephrocactus!alexanderi v. geometricus!48.JPG">Tephrocactus alexanderi v. geometricus</a>&nbsp;&nbsp;$48<hr>
 <a href="pics/plants/cac!trichocereus!chiloensis!12 | shown in a 3&#34; pot.JPG">Trichocereus chiloensis</a>&nbsp;&nbsp;$12 | shown in a 3" pot<hr>
-<a href="pics/plants/cac!trichocereus!terscheckii!16.JPG">Trichocereus terscheckii</a>&nbsp;&nbsp;$16</ul>
+<a href="pics/plants/cac!trichocereus!terscheckii!16.JPG">Trichocereus terscheckii</a>&nbsp;&nbsp;$16
 					</div><div id="contentSingle">
 						     <h3 class="textHeaderLabel">Euphorbiaceae</h3>
 					 </div>
 					 <div id="contentBottom">
-					 	<ul><a href="pics/plants/eup!euphorbia!baioensis!12 | shown in a 3.5&#34; pot.JPG">Euphorbia baioensis</a>&nbsp;&nbsp;$12 | shown in a 3.5" pot<hr>
+					 	<a href="pics/plants/eup!euphorbia!baioensis!12 | shown in a 3.5&#34; pot.JPG">Euphorbia baioensis</a>&nbsp;&nbsp;$12 | shown in a 3.5" pot<hr>
 <a href="pics/plants/eup!euphorbia!griseola!10 | 4-5&#34; tall plant.JPG">Euphorbia griseola</a>&nbsp;&nbsp;$10 | 4-5" tall plant<hr>
 <a href="pics/plants/eup!euphorbia!heteropoda!10 | shown in a 4&#34; pot.JPG">Euphorbia heteropoda</a>&nbsp;&nbsp;$10 | shown in a 4" pot<hr>
 <a href="pics/plants/eup!euphorbia!species 1!10 | shown in a 3&#34; pot.JPG">Euphorbia species 1</a>&nbsp;&nbsp;$10 | shown in a 3" pot<hr>
 <a href="pics/plants/eup!euphorbia!species 2!8 | shown in a 3.5&#34; pot.JPG">Euphorbia species 2</a>&nbsp;&nbsp;$8 | shown in a 3.5" pot<hr>
-<a href="pics/plants/eup!euphorbia!species 3!15 | 1' tall plant.JPG">Euphorbia species 3</a>&nbsp;&nbsp;$15 | 1' tall plant</ul>
+<a href="pics/plants/eup!euphorbia!species 3!15 | 1' tall plant.JPG">Euphorbia species 3</a>&nbsp;&nbsp;$15 | 1' tall plant
 					</div><div id="contentSingle">
 						     <h3 class="textHeaderLabel">Portulacaceae</h3>
 					 </div>
 					 <div id="contentBottom">
-					 	<ul><a href="pics/plants/por!anacampseros!rufescens!8.JPG">Anacampseros rufescens</a>&nbsp;&nbsp;$8</ul>
-					</div></ul>
+					 	<a href="pics/plants/por!anacampseros!rufescens!8.JPG">Anacampseros rufescens</a>&nbsp;&nbsp;$8</ul>
+					</div>
 					</div>
 					</li>
 				</ul>			
