--- a/index.html
+++ b/index.html
@@ -49,21 +49,34 @@ class="repoDescriptionHeader">Carlton&apos;s<br>Karoo</h2>
 				</div><!--Close Package Header Div-->
 
 			<div id="contentSingle">
-				<h3 class="textHeaderLabel">Other</h3>
+				<h3 class="textHeaderLabel">Homebrew Recipes</h3>
 			</div>
 				<div id="contentBottom">
-						<a href="https://carlyd95.github.io/beer" target="_blank">Homebrew Recipes</a>
+						<a href="https://carlyd95.github.io/beer/sourneipa.txt" target="_blank">NEIPA Sour</a>
 							<hr>
-						<a href="http://carlyd95.github.io/KaraokeList.csv" target="_blank">Karaoke Song List</a>
+						<a href="http://carlyd95.github.io/KaraokeList.csv" target="_blank">Cream Ale</a>
 							<hr>							
-						<a href="https://dailytext.000webhostapp.com/" target="_blank">Daily Text Email Subscription</a>
+						<a href="https://dailytext.000webhostapp.com/" target="_blank">Gose</a>
 							<hr>							
-						<a href="https://paypal.me/dunlap794/" target="_blank">Buy Me A 🍺</a>
+						<a href="https://paypal.me/dunlap794/" target="_blank">IPA</a>
 							<hr>							
-						<a href="https://github.com/carlyd95/" target="_blank">My GitHub</a>
+						<a href="https://github.com/carlyd95/" target="_blank">American Sour Ale (High Gravity)</a>
 							<hr>							
-						<a href="cydia://url/https://cydia.saurik.com/api/share#?source=http://carlyd95.github.io/repo/" target="_blank">Add My Repo (old cydia repo)</a>	
+						<a href="cydia://url/https://cydia.saurik.com/api/share#?source=http://carlyd95.github.io/repo/" target="_blank">hefeweisen</a>	
 				</div><!--Close Package Header Div-->
+			<div id="contentBottom">
+                                                <a href="https://carlyd95.github.io/beer" target="_blank">Homebrew Recipes</a>
+                                                        <hr>
+                                                <a href="http://carlyd95.github.io/KaraokeList.csv" target="_blank">Karaoke Song List</a>
+                                                        <hr>
+                                                <a href="https://dailytext.000webhostapp.com/" target="_blank">Daily Text Email Subscription</a>
+                                                        <hr>
+                                                <a href="https://paypal.me/dunlap794/" target="_blank">Buy Me A 🍺</a>
+                                                        <hr>
+                                                <a href="https://github.com/carlyd95/" target="_blank">My GitHub</a>
+                                                        <hr>
+                                                <a href="cydia://url/https://cydia.saurik.com/api/share#?source=http://carlyd95.github.io/repo/" target="_blank">Add My Repo (old cydia repo)</a>
+                                </div><!--Close Package Header Div--><div id="contentBottom">
 			<div id="contentSingle">
 							<h3 class="textHeaderLabel">Contact</h3>
 						</div>
