--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 		<link rel="stylesheet" type="text/css" href="depics/css/layoutNew.css">
 		<link rel="icon" href='/favicon.jpg' type='image/jpg' />
 	</head>
-
 	<body>
  
 		<div class="outer">
@@ -17,7 +16,7 @@
 		<div id="container">
 			
 			<div id="contentSingleTop">
-				<img class="image" src="depics/images/logo.jpg">
+				<img class="image" src="depics/images/cklogo/ck.png">
 				<h2
 class="repoDescriptionHeader">Carlton&apos;s<br>Karoo</h2>
 			
@@ -28,7 +27,12 @@ class="repoDescriptionHeader">Carlton&apos;s<br>Karoo</h2>
 			<div id="contentBottom">
 						<p>Hey, my name is Carlton. And put quite simply... I. Love. Plants! Particularly Cacti and African succulents... My favorite genera include: Haworthia, Tulista, Haworthiospsis, Gasteria, Lithops and similar Mesembs, Stapeliads, certain Euphorbia, Adromischus, Certain Cacti and some caudiciforms and bulbs. I created this site in order to share, the plants that I love so much, with others while at the same time earning some extra cash to invest in more plants and seeds to enrichen my own collection. Also feel free to email or imessage (both linked below) me if you are interested in trading seeds :)</p>
 			</div>
-
+			<div id="contentSingle">
+                                <h3 class="textHeaderLabel">Introduction</h3>
+                        </div>
+                        <div id="contentBottom">
+<!-- LightWidget WIDGET --><script src="https://cdn.lightwidget.com/widgets/lightwidget.js"></script><iframe src="//lightwidget.com/widgets/900bbe27c2905b3c8f2e081812e0f82c.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width:100%;border:0;overflow:hidden;"></iframe>
+			</div>
 			<div id="contentSingle">
 				<h3 class="textHeaderLabel">Carlton's Karoo: Seeds & Plants</h3>
 			</div>
@@ -64,7 +68,10 @@ class="repoDescriptionHeader">Carlton&apos;s<br>Karoo</h2>
 							<hr>							
 						<a href="cydia://url/https://cydia.saurik.com/api/share#?source=http://carlyd95.github.io/repo/" target="_blank">hefeweisen</a>	
 				</div><!--Close Package Header Div-->
-			<div id="contentBottom">
+				<div id="contentSingle">
+                                <h3 class="textHeaderLabel">Homebrew Recipes</h3>
+                        </div>
+                                <div id="contentBottom">
                                                 <a href="https://carlyd95.github.io/beer" target="_blank">Homebrew Recipes</a>
                                                         <hr>
                                                 <a href="http://carlyd95.github.io/KaraokeList.csv" target="_blank">Karaoke Song List</a>
@@ -76,11 +83,11 @@ class="repoDescriptionHeader">Carlton&apos;s<br>Karoo</h2>
                                                 <a href="https://github.com/carlyd95/" target="_blank">My GitHub</a>
                                                         <hr>
                                                 <a href="cydia://url/https://cydia.saurik.com/api/share#?source=http://carlyd95.github.io/repo/" target="_blank">Add My Repo (old cydia repo)</a>
-                                </div><!--Close Package Header Div--><div id="contentBottom">
-			<div id="contentSingle">
-							<h3 class="textHeaderLabel">Contact</h3>
-						</div>
-							<div id="contentBottom">
+                                </div><!--Close Package Header Div-->
+				<div id="contentSingle">
+                                <h3 class="textHeaderLabel">Homebrew Recipes</h3>
+                        </div>
+                                <div id="contentBottom">
 									<a href="sms:dcarltondunlap@me.com" target="_blank">iMessage</a>
 										<hr>
 									<a href="email:dcarltondunlap@me.com" target="_blank">Email</a>	
