--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ class="repoDescriptionHeader">Carlton&apos;s<br>Karoo</h2>
 						<p>Hey, my name is Carlton. And put quite simply... I. Love. Plants! Particularly Cacti and African succulents... My favorite genera include: Haworthia, Tulista, Haworthiospsis, Gasteria, Lithops and similar Mesembs, Stapeliads, certain Euphorbia, Adromischus, Certain Cacti and some caudiciforms and bulbs. I created this site in order to share, the plants that I love so much, with others while at the same time earning some extra cash to invest in more plants and seeds to enrichen my own collection. Also feel free to email or imessage (both linked below) me if you are interested in trading seeds :)</p>
 			</div>
 			<div id="contentSingle">
-                                <h3 class="textHeaderLabel">Introduction</h3>
+                                <h3 class="textHeaderLabel">Plantstagram</h3>
                         </div>
                         <div id="contentBottom">
 <!-- LightWidget WIDGET --><script src="https://cdn.lightwidget.com/widgets/lightwidget.js"></script><iframe src="//lightwidget.com/widgets/900bbe27c2905b3c8f2e081812e0f82c.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width:100%;border:0;overflow:hidden;"></iframe>
@@ -56,11 +56,11 @@ class="repoDescriptionHeader">Carlton&apos;s<br>Karoo</h2>
 				<h3 class="textHeaderLabel">Homebrew Recipes</h3>
 			</div>
 				<div id="contentBottom">
-						<a href="https://carlyd95.github.io/beer/sourneipa.txt" target="_blank">NEIPA Sour</a>
+						<a href="https://carlyd95.github.io/beer/recipes/SourNEIPA.txt" target="_blank">NEIPA Sour</a>
 							<hr>
 						<a href="http://carlyd95.github.io/KaraokeList.csv" target="_blank">Cream Ale</a>
 							<hr>							
-						<a href="https://dailytext.000webhostapp.com/" target="_blank">Gose</a>
+						<a href="https://carlyd95.github.io/beer/recipes/Gose.txt" target="_blank">Gose</a>
 							<hr>							
 						<a href="https://paypal.me/dunlap794/" target="_blank">IPA</a>
 							<hr>							
