--- a/ck/index.html
+++ b/ck/index.html
@@ -8,7 +8,7 @@
 		<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		<link rel="stylesheet" type="text/css" href="/depics/css/layoutNew.css">
-		<link rel="icon" href='/favicon.png' type='image/png' />
+		<link rel="icon" href='depics/images/cklogo/ck.png' type='image/png' />
 	</head>
 	<body>
 		
