--- a/ck/index.html
+++ b/ck/index.html
@@ -1,237 +1,162 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <meta charset="utf-8">
 
-  <lang="en-US">
+<html lang="en">
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>
-    Carlton's Karoo: Succulent Plants & Seeds
-  </title>
-    
-    <meta name="description" content="Carlton's Karoo is a modest succulent nursery, primarily focused on Haworthia. We are your Haworthia experts!">
+		<title>
+	    	Carlton&apos;s Karoo
+		</title>
 
-    <meta name="keywords" content="succulents,nursery,Haworthia,Gasteria,Haworthiopsis,Tulista,carlton's,karoo,carltons-karoo,carltons_karoo,Carlton Dunlap,seeds">
+	    <meta name="description" content="Carlton's Karoo is a modest succulent plant nursery focused on the cultivation of Haworthia.">
+	    <meta name="keywords" content="succulents,nursery,Haworthia,Gasteria,Haworthiopsis,Tulista,carlton's,karoo,carltons-karoo,carltons_karoo,Carlton Dunlap,seeds">
+	    <meta name="author" content="Carlton Dunlap">
 
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+	    <!-- I need to investigate these features.
+	    <!<meta name="robots" content="index, follow">
+	    <meta name="mobile-web-app-capable" content="yes">
+	    <meta name="apple-mobile-web-app-capable" content="yes">
+	    <meta name="apple-mobile-web-app-status-bar-style" content="default"> -->
 
-    <link rel="icon" href='depics/images/cklogo/ck.png' type='image/png' />
+	    <link rel="stylesheet" media="screen and (max-width: 600px)" href="mobile.css">
+		<link rel="stylesheet" media="screen and (min-width: 600px)" href="desktop.css">
 
-  <style type="text/css">
-    * {
-      font-family: Verdana;
-      text-decoration:none;
-      margin:0;
-    }
-    nav {
-      background:lightgray;
-      font-size:4vw;
-      font-weight: bold;
-      overflow:hidden;
-      text-align:center;
-      top:0;
-      width:100%;
-      height:7vw;
-    }
-    .left {
-      float:left;
-      height: 100%;
-      text-align:center;
-      display:flex;
-      align-items:center;
-      margin-left:2vw;
-      width:0;
+	    <link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png?v=yyQkmq8Rvb">
+		<link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png?v=yyQkmq8Rvb">
+		<link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png?v=yyQkmq8Rvb">
+		<link rel="manifest" href="/images/site.webmanifest?v=yyQkmq8Rvb">
+		<!-- I do not like the look of this on safari.
+		<link rel="mask-icon" href="/images/safari-pinned-tab.svg?v=yyQkmq8Rvb" color="#4e5a66"> -->
+		<link rel="shortcut icon" href="/images/favicon.ico?v=yyQkmq8Rvb">
+		<meta name="apple-mobile-web-app-title" content="CK">
+		<meta name="application-name" content="CK">
+		<meta name="msapplication-TileColor" content="#ff0000">
+		<meta name="msapplication-config" content="/images/browserconfig.xml?v=yyQkmq8Rvb">
+		<meta name="theme-color" content="#4e5a66">
 
-    }
-    #navtab {
-      align-items:center;
-      color:dimgray;
-      font-size:3vw;
-      font-weight:bold;
-    }
+		<meta property="fb:page_id" content="@carltonskaroo">
+	    <meta property="og:title" content="Carlton's Karoo">
+	    <meta property="og:image" content="/images/apple-touch-icon.png?v=yyQkmq8Rvb">
+	    <meta property="og:description" content="Carlton's Karoo is a modest succulent plant nursery focused on the cultivation of Haworthia.">
+	    <meta property="og:url" content="https://carltons-karoo.com">
+	    <meta property="og:site_name" content="Carlton's Karoo">
+	    <meta property="og:type" content="website">
 
-    #intro {
-      margin-top:12vw;
-    }
-    
-    .mid {
-      display:flex;
-      align-items:center;
-      height: 100%;
-      width:80%;
-      margin: 0 auto;
-      justify-content: center;
-    }
+	</head>
+	<body class="body">
 
-    header {
-      margin-left:1vw;
-    }
+		<header id="topBar">
+			<main class="alignleft"></main>
+			<main class="navbar-toggler alignright">
+		    	<main class="animated-icon2 second-button" data-toggle="collapse" data-target="#navbarSupportedContent23"
+		    aria-controls="navbarSupportedContent23" aria-expanded="false" aria-label="Toggle navigation">
+		    		<span></span>
+		    		<span></span>
+		    		<span></span>
+		    		<span></span>
+				</main>
+	  		</main>
+			<!-- <main class="alignright"></main> -->
+			<main class="center">
+				<img id="logo" src="/depics/images/cklogo/ck-no-shadow-500x500.png" alt="CK logo" title="CK logo">
+				<h1>
+					Carlton&apos;s Karoo
+				</h1>
+			</main>
+		</header>
 
-    #logo {
-      height: 6vw;
-    }
+			<nav id="dropNav">
+			<main>
+				<a class="links" href="/">Home</a>
+			</main>
+			<hr>
+			<main>
+				<a class="links" href="/about">About Me</a>
+			</main>
+			<hr>
+			<main>
+				<a class="links" href="/plants">Plants</a>
+			</main>
+			<hr>
+			<main>
+				<a class="links" href="/seeds">Seeds</a>
+			</main>
+			<hr>
+			<main>
+				<a class="links" href="/cart">Cart</a>
+			</main>
+			<hr>
+			<main>
+				<a class="links" href="/tips">Growing Tips</a>
+			</main>
+			<hr>
+			<main>
+				<a class="links" href="https://www.instagram.com/carltons_karoo/">Plantstagram</a>
+			</main>
+			<hr>
+			<main>
+				<a class="links" href="/brews">Brews</a>
+			</main>
+			<hr>
+			<main>
+				<a class="links" href="/contact">Contact</a>
+			</main>
+		</nav>
 
-    .cont {
-        border:solid dimgray 0.1vw;
-        margin:4vw;
-        background: white;
-        border-radius:0.5vw;
-        padding-bottom: 0;
-    }
+		<article class="cont">
+			<h2>Biography</h2>
+			<hr>
+			<figure class="bio">
+				<img src="depics/images/selfie-600x600.png" alt="selfie" title="Carlton Dunlap">
+			</figure>
+			<p id="bioP"></p>
+		</article>
 
-    .cont h2 {
-      border-radius:0.5vw 0.5vw 0vw 0vw;
-      background:lightgray;
-      padding: 0.5vw;
-      font-size:2vw;
-      text-align:center;
-    }
+		<article class="cont">
+			<h2>Plantstagram</h2>
+			<hr>
+		  	<figure id="ig">
+		  		<script src="https://cdn.lightwidget.com/widgets/lightwidget.js"></script>
+		  		<iframe title="plantstagram" alt="plantstagram" src="https://cdn.lightwidget.com/widgets/5953e330124f5bc9aa39df4b3ee7354a.html" class="lightwidget-widget" style="width:100%;border:0;overflow:hidden;"></iframe>
+			</figure>
+		</article>
 
-    .cont p {
-      padding:2vw;
-      font-size: 2vw;
-    }
+		<article class="cont">
+			<h2>Title</h2>
+			<hr>
+			<p>content.</p>
+		</article>
+	</body>
+	<script>
+		// Function for calculating my age.
+		      function getAge(DOB) {
+	    var today = new Date();
+	    var birthDate = new Date(DOB);
+	    var age = today.getFullYear() - birthDate.getFullYear();
+	    var m = today.getMonth() - birthDate.getMonth();
+	    if (m < 0 || (m === 0 && today.getDate() < birthDate.getDate())) {
+	        age = age - 1;
+	    	}	
 
-    .sidenav {
-      height:0;
-      width: 100%;
-      position: absolute;
-      z-index: 1;
-      top: 7vw;
-      align-items:center;
-      overflow-x: hidden;
-      transition: 0.6s;
-      padding:0;
-      text-align:center;
-      background-color: white;
-      box-shadow: 0 4vw 7vw -3vw black;
-      border-top:0.1vw solid dimgray;
-    }
+	    return age;
+	    }
 
-    .sidenav a {
-      margin:3vw;
-      text-decoration: none;
-      font-size: 2vw;
-      color: dimgray;
-      display: block;
-      transition: 0.3s;
-    }
+	    var age = getAge("8/29/1995");
 
-    .sidenav a:hover {
-      color: lightsteelblue;
-    }
+		document.getElementById('bioP').innerHTML =  "My name is Carlton Dunlap. I am " + age + " years old and I currently work at a local hospital as a Nursing Assistant. Additionally I am currently working towards a database development certificate. Growing up I have found life to be filled with so many interesting activities. A few hobbies that I currently enjoy include playing the guitar and singing, homebrewing beer, and most collecting and cultivating various cacti and succulent genera. Most notably I cultivate Haworthia a vastly diverse compact genus from the southern cape of South Africa. It is my hope that at some point in the future will be able to use this website as an avenue of sharing my love of these beautiful plants in the form of pictures and oppotunities to buy non-TC offsets, seeds and seed-grown plants. I also plan to host my homebrew recipes here.";
+	</script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+	<script>
 
-    .sidenav hr {
-      border-bottom:0;
-      border-top: 0.1vw solid dimgray;
-      border-style:solid;
-    }
+		// Function that invokes hamburger animation and the opening of the navigation window.
+				$(document).ready(function () {
+		$('.second-button').on('click', function () {
+			$('.animated-icon2').toggleClass('open');
+		    $('body').toggleClass('opennav-body');
+		    $('nav').toggleClass('dropNavopen');
+		  });
+		});
 
-    .me {
-      text-align:center;
-    }
-
-    #me {
-      margin:1vw;
-      margin-bottom:0;
-      width:20vw;
-      object-fit:cover;
-      border-radius: 50%;
-      border: 1vw solid lightgray;
-    }
-
-    #ig {
-      margin:1vw;
-    }
-
-/*  @media screen and (max-height: 600px) {
-  .sidenav {padding-top: 15px;}
-  .sidenav a {font-size: 18px;}
-} */
-
-  </style>
-
-<script>
-
-          function getAge(DOB) {
-    var today = new Date();
-    var birthDate = new Date(DOB);
-    var age = today.getFullYear() - birthDate.getFullYear();
-    var m = today.getMonth() - birthDate.getMonth();
-    if (m < 0 || (m === 0 && today.getDate() < birthDate.getDate())) {
-        age = age - 1;
-    }
-
-    return age;
-    }
-
-
-                function autoNav() {
-      if (document.getElementById("mySidenav").clientHeight > 0) {
-       document.getElementById("mySidenav").style.height = "0%";
-       document.getElementById("nav").style.position = "static";
-       document.getElementById("body").style.overflow = "scroll";
-       document.getElementById("mySidenav").style.borderBottom = "0 solid dimgray";
-
-      } else {
-                document.getElementById("mySidenav").style.height = "45%";
-                document.getElementById("nav").style.position = "sticky";
-                document.getElementById("body").style.overflow = "hidden";
-                document.getElementById("mySidenav").style.borderBottom = "0.1vw solid dimgray";
-
-      }
-        }
-
-        var age = getAge("8/29/1995");
-
-</script>
-
-</head>
-
-<body id="body">
- 
-  <nav id="nav">
-    <div class="left"
-      onclick="autoNav()"><span id="navtab">≡</span>
-    </div>
-    <div class="mid">
-      <img id="logo" src="/depics/images/cklogo/ck@2x.png">
-      <header>Carlton's Karoo</header>
-    </div>
-  </nav>
-
-<div id="mySidenav" class="sidenav">
-  <a href="#/">Home</a><hr>
-  <a href="#">Plants</a><hr>
-  <a href="#">Seeds</a><hr>
-  <a href="#">Cart</a><hr>
-  <a href="#">Cultivation Resources</a><hr>
-  <a href="#">Germination Tips</a><hr>
-  <a href="#">Plantstagram</a><hr>
-  <a href="#">Brews</a><hr>
-  <a href="#">Contact</a>
-</div>
-
-
-<article class="cont" id="meat">
-<h2>Biography</h2>
-<div class="me">
-  <img id="me" src="depics/images/repoLogo.real.png">
-</div>
-<p>Hey, my name is Carlton Dunlap. I am <script>document.write(age);</script> years old and I currently work at a local hospital as a Nursing Assistant. Additionally I am currently working towards a database development certificate. Growing up I have found life to be filled with so many interesting activities. A few hobbies that I currently enjoy include playing the guitar and singing, homebrewing beer, and most collecting and cultivating various cacti and succulent genera. Most notably I cultivate Haworthia a vastly diverse compact genus from SA. It is my hope that at some point in the future will be able to use this website as an avenue of sharing my love of these beautiful plants in the form of pictures and oppotunities to buy non-TC offsets, seeds and seed-grown plants. I also plan to host my homebrew recipes here.</p>
-</article>
-<article class="cont" id="meat">
-<h2>Plantstagram</h2>
-<figure id="ig">
-  <script src="https://cdn.lightwidget.com/widgets/lightwidget.js"></script>
-  <iframe src="https://cdn.lightwidget.com/widgets/5953e330124f5bc9aa39df4b3ee7354a.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width:100%;border:0;overflow:hidden;"></iframe></figure>
-
-</article>
-<article class="cont" id="meat">
-<h2>bluh</h2>
-<p>blehh.</p>
-</article>
-
-
-</body>
+	</script>
 </html>
